# photo-tinder-desktop

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: build.yml
src/: index.html  ranking.js  style.css  swipe.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  hashing.rs  image_manager.rs  lib.rs  main.rs  ranking.rs  state.rs
