[package]
name = "photo-tinder"
version = "1.0.0"
description = "Photo Tinder - Image Triage and Ranking"
authors = ["Photo Tinder"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
md5 = "0.7"
walkdir = "2"
rand = "0.8"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
